# explore-arxiv-preprint-parsing

./: .gitignore  .gitmodules  .markdownlint-cli2.yaml  Makefile  README.md  pyproject.toml
example-data/: comet-arxiv-results-first-1000.jsonl  example-arxiv-papers.csv
explore_arxiv_preprint_parsing/: batch_convert_pdf_to_markdown.py  batch_convert_pdf_to_tei_xml_grobid.py  batch_convert_tei_xml_to_affiliation_json.py  run_vllm_api.py  vllm_load_lora.py
