[project]
name = "explore-arxiv-preprint-parsing"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "arxiv==2.2.0",
    "feedparser>=6.0.12",
    "huggingface-hub",
    "markitdown[pdf]>=0.1.4",
    "modal>=1.3.3",
    "openai>=2.21.0",
    "tqdm>=4.67.3",
    "transformers>=4.56.0,<5",
    "vllm>=0.11.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "pylint>=4.0.5",
    "types-tqdm>=4.67.3.20260205",
]

[tool.mypy]
exclude = [
  '^arxiv-preprint-parsing/',
]
